Fine-tune jvm